Update Empedrad, Reyes, Simple - 1.html

--- a/Empedrad, Reyes, Simple - 1.html
+++ b/Empedrad, Reyes, Simple - 1.html
@@ -5,7 +5,7 @@
 <h2 align="center"><font color="blue" size="5"> SERVERS OF THE BEST FOODS </h2>
 
 </head>
-<body background="BACKGROUND.JPG" bgcolor="yellow" text="black" topmargin="50">
+<body background="BACKGROUND.jpg" text="black" topmargin="50">
 <font color="black">
 <HR color="black">
 <b><u><marquee>WELCOME TO ERS FOOD AND SERVICES!!! ENJOY YOUR DELIGHTFUL DESIRE
