Update Empedrad, Reyes, Simple - 2.html

--- a/Empedrad, Reyes, Simple - 2.html
+++ b/Empedrad, Reyes, Simple - 2.html
@@ -91,13 +91,13 @@ table, th, td, tr {border:2px solid black;}
  <table class="tableOne" align="center">
    <tr>
      <td class="td">
-      <img src="pizza.avif" alt="PIZZA" style="width:400px; height:300px;">
+      <img src="Pizza.avif" alt="PIZZA" style="width:400px; height:300px;">
      </td>
      <td>
-      <img src="burger.jpg" alt="BURGER" style="width:400px; height:300px;">
+      <img src="Burger.jpg" alt="BURGER" style="width:400px; height:300px;">
      </td>
      <td>
-      <img src="dessert.webp" alt="DESSERTS" style="width:400px; height:300px;">
+      <img src="Dessert.webp" alt="DESSERTS" style="width:400px; height:300px;">
      </td>
 </p>
 
