Update Empedrad, Reyes, Simple - 2.html

--- a/Empedrad, Reyes, Simple - 2.html
+++ b/Empedrad, Reyes, Simple - 2.html
@@ -5,7 +5,7 @@ Sign Up for ERS Food and Services
 </title>
 </head>
 
-<body background="BACKGROUND.JPG" topmargin="50" leftmargin="50" rightmargin="50">
+<body background="BACKGROUND.jpg" topmargin="50" leftmargin="50" rightmargin="50">
 
 <p align="center">
 <font size="12" face="impact" color="Red">ERS Food and Services</font></p>
