--- a/Empedrad, Reyes, Simple - 3.html
+++ b/Empedrad, Reyes, Simple - 3.html
@@ -7,7 +7,7 @@
 <h4 align="center"><font color="black" size="6">&hearts; THANK YOU &hearts;</h4>
 <h5 align="center"><font color="black" size="4"> RATE OF SERVICE </h5>
 </head>
-<body background="BACKGROUND.JPG">
+<body background="BACKGROUND.jpg">
 
 <p align="center"><input type="range"></P>
 
